--- a/_config.yml
+++ b/_config.yml
@@ -494,3 +494,21 @@ tracks :
   - name : Gimmik - 7th of May
     url : http://goo.gl/MMvuL5
     date: 2013-11-01 Fri 06:18:03
+  - name : IJO - Ecter Cliffs
+    url : http://goo.gl/6ud8d1
+    date: 2013-11-02 Sat 09:14:05
+  - name : IJO - Lu An
+    url : http://goo.gl/XOgmj3
+    date: 2013-11-02 Sat 11:00:32
+  - name : Zainetica - Remembrance (2009 mix)
+    url : http://goo.gl/T04t74
+    date: 2013-11-02 Sat 12:16:13
+  - name : Melorman - The path
+    url : http://goo.gl/TjsNi5
+    date: 2013-11-02 Sat 12:44:09
+  - name : Praveen - No Sky, No Rain!
+    url : http://goo.gl/vmYX6l
+    date: 2013-11-02 Sat 13:58:29
+  - name : Proswell - Basil
+    url : http://goo.gl/PqQcWP
+    date: 2013-11-02 Sat 14:04:00
