--- a/_config.yml
+++ b/_config.yml
@@ -512,3 +512,6 @@ tracks :
   - name : Proswell - Basil
     url : http://goo.gl/PqQcWP
     date: 2013-11-02 Sat 14:04:00
+  - name : Gimmik - Un Jour
+    url : http://goo.gl/ItdZ2g
+    date: 2013-11-04 Mon 06:14:40
