--- a/_config.yml
+++ b/_config.yml
@@ -515,3 +515,39 @@ tracks :
   - name : Gimmik - Un Jour
     url : http://goo.gl/ItdZ2g
     date: 2013-11-04 Mon 06:14:40
+  - name : pumpkin jacket - So What
+    url : http://goo.gl/C34AgI
+    date: 2013-11-05 Tue 04:51:25
+  - name : Orchestra de Blonde - One Yaer Sax Power Symphony (Live)
+    url : http://goo.gl/ofGJYa
+    date: 2013-11-05 Tue 05:03:02
+  - name : G.M.Orchestra - We Are Free (Live)
+    url : http://goo.gl/kQbK9p
+    date: 2013-11-05 Tue 05:22:58
+  - name : ifVersionLinger - La Prisa Educable - open version [mPauly]
+    url : http://goo.gl/hxKoiV
+    date: 2013-11-05 Tue 05:28:16
+  - name : Marcos Paiva - Edison N. 5
+    url : http://goo.gl/LlCKAz
+    date: 2013-11-05 Tue 06:47:54
+  - name : Prime Time Nation - Que Pasa Por La Vida
+    url : http://goo.gl/mg4xTb
+    date: 2013-11-05 Tue 07:22:36
+  - name : Marcos Paiva - Edison N. 6
+    url : http://goo.gl/sRtoVi
+    date: 2013-11-05 Tue 07:55:41
+  - name : pumpkin jacket - Rainbow
+    url : http://goo.gl/6GUE90
+    date: 2013-11-05 Tue 07:58:58
+  - name : Sax a. Moryson - Rhythm Of My Hearts (Live)
+    url : http://goo.gl/JiwPtL
+    date: 2013-11-05 Tue 08:26:52
+  - name : pumpkin jacket - Giant Steps
+    url : http://goo.gl/9jGOkm
+    date: 2013-11-05 Tue 09:08:30
+  - name : Sax a. Moryson - Anno 1926
+    url : http://goo.gl/FWKZTe
+    date: 2013-11-05 Tue 10:19:10
+  - name : G.M.Orchestra - Second Floor (Live)
+    url : http://goo.gl/1jCDnY
+    date: 2013-11-05 Tue 10:24:28
