--- a/_config.yml
+++ b/_config.yml
@@ -551,3 +551,24 @@ tracks :
   - name : G.M.Orchestra - Second Floor (Live)
     url : http://goo.gl/1jCDnY
     date: 2013-11-05 Tue 10:24:28
+  - name : Sinq - Whos Afraid of Noises?s Afraid of Noises?
+    url : http://goo.gl/XvgnAd
+    date: 2013-11-06 Wed 04:09:44
+  - name : aAirial - Her voice
+    url : http://goo.gl/HM4YMO
+    date: 2013-11-06 Wed 04:22:32
+  - name : Sinq - Be Brave
+    url : http://goo.gl/O9RqIq
+    date: 2013-11-06 Wed 05:23:12
+  - name : aAirial - Harmonie
+    url : http://goo.gl/J204hz
+    date: 2013-11-06 Wed 05:27:28
+  - name : Monoceros - Northern lights
+    url : http://goo.gl/xC1lOR
+    date: 2013-11-06 Wed 05:31:45
+  - name : Amorph - And then i woke up
+    url : http://goo.gl/Ql0e2U
+    date: 2013-11-06 Wed 06:26:23
+  - name : aAirial - You + Me = Us
+    url : http://goo.gl/uJ2ic8
+    date: 2013-11-06 Wed 06:41:19
