--- a/_config.yml
+++ b/_config.yml
@@ -572,3 +572,9 @@ tracks :
   - name : aAirial - You + Me = Us
     url : http://goo.gl/uJ2ic8
     date: 2013-11-06 Wed 06:41:19
+  - name : Sinq - Overpass
+    url : http://goo.gl/iodOjA
+    date: 2013-11-08 Fri 07:22:23
+  - name : Sinq - Infectious
+    url : http://goo.gl/QtLu5Y
+    date: 2013-11-08 Fri 08:26:00
