--- a/_config.yml
+++ b/_config.yml
@@ -578,3 +578,12 @@ tracks :
   - name : Sinq - Infectious
     url : http://goo.gl/QtLu5Y
     date: 2013-11-08 Fri 08:26:00
+  - name : Sinq - Headphase
+    url : http://goo.gl/NvK3z8
+    date: 2013-11-09 Sat 09:34:05
+  - name : Sinq - Laidback Sea
+    url : http://goo.gl/J6WwYG
+    date: 2013-11-09 Sat 10:25:58
+  - name : New Deal - Stick Out
+    url : http://goo.gl/YYWZ1f
+    date: 2013-11-09 Sat 13:38:00
