michael maricle radio

--- a/_config.yml
+++ b/_config.yml
@@ -587,3 +587,24 @@ tracks :
   - name : New Deal - Stick Out
     url : http://goo.gl/YYWZ1f
     date: 2013-11-09 Sat 13:38:00
+  - name : New Deal - Fuel Their Hate
+    url : http://goo.gl/Q6bdtS
+    date: 2013-11-10 Sun 08:06:33
+  - name : Ostraka - Fire Diamond
+    url : http://goo.gl/4GA1uh
+    date: 2013-11-10 Sun 08:50:53
+  - name : New Deal - Delayed Gratification
+    url : http://goo.gl/GRmp8z
+    date: 2013-11-10 Sun 09:11:09
+  - name : Ostraka - Blitzen Machine
+    url : http://goo.gl/RvEC9N
+    date: 2013-11-10 Sun 10:02:57
+  - name : State Azure - Architect
+    url : http://goo.gl/x0rJsF
+    date: 2013-11-10 Sun 11:22:49
+  - name : New Deal - Intro
+    url : http://goo.gl/Ky1QaA
+    date: 2013-11-10 Sun 11:54:27
+  - name : gluk - TMO Menu (GLUK Remix)
+    url : http://goo.gl/R2AA9q
+    date: 2013-11-10 Sun 12:07:24
