--- a/_config.yml
+++ b/_config.yml
@@ -608,3 +608,6 @@ tracks :
   - name : gluk - TMO Menu (GLUK Remix)
     url : http://goo.gl/R2AA9q
     date: 2013-11-10 Sun 12:07:24
+  - name : abyssal plains - kaleidoscope
+    url : http://goo.gl/iBXRJA
+    date: 2013-11-11 Mon 05:55:20
