midwest product radio

--- a/_config.yml
+++ b/_config.yml
@@ -615,3 +615,6 @@ tracks :
   - name : Outputmessage - Heisenberg (Magic Power Mix)
     url : http://goo.gl/Oa8Zkp
     date: 2013-11-13 Wed 05:42:35
+  - name : Outputmessage - 40000km
+    url : http://goo.gl/YqW4Uy
+    date: 2013-11-14 Thu 05:44:21
