--- a/_config.yml
+++ b/_config.yml
@@ -618,3 +618,6 @@ tracks :
   - name : Outputmessage - 40000km
     url : http://goo.gl/YqW4Uy
     date: 2013-11-14 Thu 05:44:21
+  - name : Monoceros - When the trees sleep
+    url : http://goo.gl/Q1aVTW
+    date: 2013-11-16 Sat 08:53:12
