--- a/_config.yml
+++ b/_config.yml
@@ -621,3 +621,9 @@ tracks :
   - name : Monoceros - When the trees sleep
     url : http://goo.gl/Q1aVTW
     date: 2013-11-16 Sat 08:53:12
+  - name : General Fuzz - Walking Home
+    url : http://goo.gl/fG0oop
+    date: 2013-11-18 Mon 05:05:23
+  - name : iambic - Sketches
+    url : http://goo.gl/PSBq6r
+    date: 2013-11-18 Mon 05:52:52
