--- a/_config.yml
+++ b/_config.yml
@@ -627,3 +627,9 @@ tracks :
   - name : iambic - Sketches
     url : http://goo.gl/PSBq6r
     date: 2013-11-18 Mon 05:52:52
+  - name : DJ AJA Inc. - Beckon
+    url : http://goo.gl/zi59vD
+    date: 2013-11-19 Tue 04:06:16
+  - name : Abfahrt Hinwil - Phase4
+    url : http://goo.gl/7RTYP4
+    date: 2013-11-19 Tue 04:37:00
