--- a/_config.yml
+++ b/_config.yml
@@ -633,3 +633,9 @@ tracks :
   - name : Abfahrt Hinwil - Phase4
     url : http://goo.gl/7RTYP4
     date: 2013-11-19 Tue 04:37:00
+  - name : Motionfield - 1973
+    url : http://goo.gl/Lf9TJ3
+    date: 2013-11-24 Sun 07:53:03
+  - name : Motionfield - Depend on me
+    url : http://goo.gl/OCHPYX
+    date: 2013-11-24 Sun 10:01:35
