--- a/_config.yml
+++ b/_config.yml
@@ -639,3 +639,12 @@ tracks :
   - name : Motionfield - Depend on me
     url : http://goo.gl/OCHPYX
     date: 2013-11-24 Sun 10:01:35
+  - name : General Fuzz - Warm Steel
+    url : http://goo.gl/u64qaM
+    date: 2013-11-26 Tue 04:28:36
+  - name : iambic - Fragments
+    url : http://goo.gl/jRpyqP
+    date: 2013-11-26 Tue 05:56:45
+  - name : iambic - Break 5757
+    url : http://goo.gl/h6xiNM
+    date: 2013-11-26 Tue 07:01:18
