--- a/_config.yml
+++ b/_config.yml
@@ -648,3 +648,6 @@ tracks :
   - name : iambic - Break 5757
     url : http://goo.gl/h6xiNM
     date: 2013-11-26 Tue 07:01:18
+  - name : Cepia - Hootenanny
+    url : http://goo.gl/VfUTRp
+    date: 2013-12-03 Tue 16:44:22
