--- a/_config.yml
+++ b/_config.yml
@@ -651,3 +651,6 @@ tracks :
   - name : Cepia - Hootenanny
     url : http://goo.gl/VfUTRp
     date: 2013-12-03 Tue 16:44:22
+  - name : Ochre - A Great Wave
+    url : http://goo.gl/VyhA61
+    date: 2013-12-11 Wed 10:31:57
