--- a/_config.yml
+++ b/_config.yml
@@ -657,3 +657,6 @@ tracks :
   - name : Sax a. Moryson - Anno 1926
     url : http://goo.gl/FWKZTe
     date: 2014-05-16 Fri 06:51:37
+  - name : Bionic Sheep - Other Peoples Friends
+    url : http://goo.gl/hQ6Kad
+    date: 2014-06-08 Sun 18:44:35
