--- a/_config.yml
+++ b/_config.yml
@@ -660,3 +660,6 @@ tracks :
   - name : Bionic Sheep - Other Peoples Friends
     url : http://goo.gl/hQ6Kad
     date: 2014-06-08 Sun 18:44:35
+  - name : Horse Feathers - Curs in the Weeds
+    url : http://goo.gl/DA8KSN
+    date: 2014-08-31 Sun 13:41:14
