--- a/_config.yml
+++ b/_config.yml
@@ -663,3 +663,6 @@ tracks :
   - name : Horse Feathers - Curs in the Weeds
     url : http://goo.gl/DA8KSN
     date: 2014-08-31 Sun 13:41:14
+  - name : Gimmik - Lets Play Crickets Play Cricket
+    url : http://goo.gl/hXpjdD
+    date: 2014-09-07 Sun 14:29:00
