--- a/_config.yml
+++ b/_config.yml
@@ -666,3 +666,15 @@ tracks :
   - name : Gimmik - Lets Play Crickets Play Cricket
     url : http://goo.gl/hXpjdD
     date: 2014-09-07 Sun 14:29:00
+  - name : Gimmik - Booga
+    url : http://goo.gl/74XeAM
+    date: 2014-09-07 Sun 16:10:36
+  - name : planet boelex - diciassette anni
+    url : http://goo.gl/au26va
+    date: 2014-09-07 Sun 18:18:25
+  - name : Christ. - Round the Rigg
+    url : http://goo.gl/G3Vl1n
+    date: 2014-09-07 Sun 18:58:16
+  - name : Sleepy Town Manufacture - nostalgin
+    url : http://goo.gl/VxlHgs
+    date: 2014-09-07 Sun 19:05:48
