--- a/_config.yml
+++ b/_config.yml
@@ -678,3 +678,6 @@ tracks :
   - name : Sleepy Town Manufacture - nostalgin
     url : http://goo.gl/VxlHgs
     date: 2014-09-07 Sun 19:05:48
+  - name : Gimmik - 7TH of May
+    url : http://goo.gl/aQgfXU
+    date: 2014-10-19 Sun 12:08:55
