--- a/_config.yml
+++ b/_config.yml
@@ -681,3 +681,9 @@ tracks :
   - name : Gimmik - 7TH of May
     url : http://goo.gl/aQgfXU
     date: 2014-10-19 Sun 12:08:55
+  - name : Monoceros - Off (tales)
+    url : http://goo.gl/BSvRqW
+    date: 2014-11-30 Sun 13:59:37
+  - name : aAirial - Litany
+    url : http://goo.gl/g8YQCi
+    date: 2014-11-30 Sun 15:34:52
