--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
 
-# paginate: 7
-# paginate_path: "posts.html/page:num"
+paginate: 7
+paginate_path: "posts.html/page:num"
 
 production_url : http://dr3wh0.net
 
