--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ auto: true
 pygments: true
 
 paginate: 7
-paginate_path: "posts.html/page:num"
+# paginate_path: "posts.html/page:num"
 
 production_url : http://dr3wh0.net
 
