--- a/_config.yml
+++ b/_config.yml
@@ -654,9 +654,9 @@ tracks :
   - name : Ochre - A Great Wave
     url : http://goo.gl/VyhA61
     date: 2013-12-11 Wed 10:31:57
-  - name : Sax a. Moryson - Anno 1926
-    url : http://goo.gl/FWKZTe
-    date: 2014-05-16 Fri 06:51:37
+#  - name : Sax a. Moryson - Anno 1926
+#    url : http://goo.gl/FWKZTe
+#    date: 2014-05-16 Fri 06:51:37
   - name : Bionic Sheep - Other Peoples Friends
     url : http://goo.gl/hQ6Kad
     date: 2014-06-08 Sun 18:44:35
