--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
-pygments: true
+# pygments: true
 
 paginate: 11
 # paginate_path: "posts.html/page:num"
