--- a/_config.yml
+++ b/_config.yml
@@ -96,10 +96,10 @@ lastfm:
 tracks :
   - name : Aphex Twin - Avril 14th
     url : http://www.youtube.com/watch?v=MBFXJw7n-fU
-  - name : Low - Fearless (P.Floyd Cover)
-    url : http://www.youtube.com/watch?v=2LyEcWxI3UQ
+  - name : Pink Floyd - Fearless
+    url : https://www.youtube.com/watch?v=TeyHPAdxuy0
   - name : Stars Of The Lid - December Hunting
-    url : http://www.youtube.com/watch?v=u-MXZDkcPKM
+    url : https://www.youtube.com/watch?v=UuJl2J_NraY
 #   - name : Abfarhrt Hinwil - Radiowellen
 #     url : http://t.co/JrzTapEmhw
 #   - name : Com Truise - Cyanide Sisters
